--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1020,6 +1020,7 @@ input[type='number'] {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
   cursor: pointer;
 }
 
